[package]
name = "vongform"
version = "0.1.0"
authors = ["Chris Dickinson <christopher.s.dickinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
anyhow = "1.0.26"
async-trait = "0.1.22"
base64 = "0.11.0"
futures = "0.3.1"
async-std = { version = "1.4.0", features = ["attributes"] }
surf = "1.0.3"
thiserror = "1.0.9"
serde_yaml = "0.8.11"
serde = "1.0.104"
serde_derive = "1.0.104"
